chore: cleanup and reorder

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "an-fm-19",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +8,6 @@
     "watch": "ng build --watch --configuration development",
     "serve:ssr:an-fm-19": "node dist/an-fm-19/server/server.mjs"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
     "@angular/common": "^19.0.0",
@@ -22,8 +21,7 @@
     "@angular/ssr": "^19.0.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.1",
