--- a/angular.json
+++ b/angular.json
@@ -60,7 +60,8 @@
             "outputMode": "server",
             "ssr": {
               "entry": "src/server.ts"
-            }
+            },
+            "security": { "autoCsp": true }
           },
           "configurations": {
             "production": {
