--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "NG_HMR_TEMPLATES=1 ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "serve:ssr:an-fm-19": "node dist/an-fm-19/server/server.mjs"
