--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "an-fm-19",
+  "name": "angie",
   "version": "0.1.0",
   "scripts": {
     "ng": "ng",
-    "start": "NG_HMR_TEMPLATES=1 ng serve",
+    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "serve:ssr:an-fm-19": "node dist/an-fm-19/server/server.mjs"
+    "serve:ssr:angie": "node dist/angie/server/server.mjs"
   },
   "dependencies": {
     "@angular/animations": "^19.0.0",
