--- a/angular.json
+++ b/angular.json
@@ -10,7 +10,8 @@
           "inlineTemplate": true,
           "inlineStyle": true,
           "skipTests": true,
-          "changeDetection": "OnPush"
+          "changeDetection": "OnPush",
+          "flat": true
         },
         "@schematics/angular:class": {
           "skipTests": true
